--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
          <h2>PORTAFOLIO</h2>
         <div class="galeria">
             <div class="proyecto">
-                 <img src="/imge/portafolio/P1.png" alt="">
+                 <img src="./imge/portafolio/P1.png" alt="">
                  <div class="overlay">
                      <h3>DISEÑO CREATIVO</h3>
                      <p>FOTOGRAÍA</p>
